outputs/workspace_output_1773033901_1678.txt
/workspace/web/app.js:1291
        ${escapeHtml(p.address ? `<div style="font-size:12px;color:var(--text-muted);margin-top:.3rem">📍 ${p.address || '')}</div>` : ''}
                                                                                                            ^^^^^^^^^^^^^^^

SyntaxError: Missing } in template expression
    at wrapSafe (node:internal/modules/cjs/loader:1464:18)
    at checkSyntax (node:internal/main/check_syntax:78:3)

Node.js v20.20.0
❌ app.js has syntax errors
